grammar.js
    source_file: ($) =>
      seq(
        optional(choice($._bom, $.shebang)),
        choice($.module_def, repeat($._declaration)),
        optional(seq($.end_file, $._after_eof)),
      ),

    _bom: (_$) => token.immediate("\uFEFF"), // kind of like a special form of whitespace
    end_file: (_) => token(seq(prec(100, choice(/\x1a/, /__EOF__/)))),

    identifier: (_$) => /[_\p{XID_Start}][\p{XID_Continue}]*/,

    //
    // Token String
    //
    bool: (_$) => token("bool"),
    int: (_$) => token("int"),
    float: (_$) => token("float"),
    false: (_$) => token("false"),
    auto: (_$) => token("auto"),
    const: (_$) => token("const"),
    delegate: (_$) => token("delegate"),
    enum: (_$) => "enum",
    function: (_$) => token("function"),
    immutable: (_$) => token("immutable"),
    in: (_$) => token("in"),
    interface: (_$) => token("interface"),
    out: (_$) => token("out"),
    pure: (_$) => token("pure"),
    ref: (_$) => token("ref"),
    return: (_$) => token("return"),
    unittest: (_$) => token("unittest"),
    _declaration: ($) =>
      choice(
        seq($._declaration2),
        // seq(repeat1($._attribute), $._declaration2),
        seq(repeat1($._attribute), "{", repeat($._declaration), "}"),
      ),

    storage_class: ($) =>
      choice(
        $.linkage_attribute,
        $.align_attribute,
        $.at_attribute,
        $.type_ctor,
        $.deprecated,
        $.static,
        $.extern,
        $.abstract,
        $.final,
        $.override,
        $.synchronized,
        $.auto,
        $.scope,
        $.gshared,
        $.ref,
        $._function_attribute_kwd,
      ),

    //
    // Initializers
    //
    auto_declaration: ($) =>
      prec.right(
        seq(
          repeat($._attribute),
          repeat1($.storage_class),
          commaSep1($._auto_assignment),
          ";",
        ),
      ),

    _auto_assignment: ($) =>
      seq(
        field("variable", $.identifier),
        optional($.template_parameters),
        "=",
        field("value", $._initializer),
      ),

    //
    // Alias Declaration
    //
    type: ($) =>
      prec.right(seq(repeat($.type_ctor), $._type2, repeat($._type_suffix))),

    _type2: ($) =>
      prec.right(
        choice(
          $.void,
          $._builtin_type,
          $._qualified_id,
          seq(".", $._qualified_id),
          $.typeof_expression,
          seq($.typeof_expression, ".", $._qualified_id),
          seq($.type_ctor, "(", $.type, ")"),
          $.vector_type,
          $.traits_expression,
          $.mixin_expression,
        ),
      ),

    // dparse says the type is optional, but that seems nonsensical.
    _builtin_type: ($) =>
      choice(
        $.bool,
        $.byte,
        $.ubyte,
        $.char,
        $.short,
        $.ushort,
        $.int,
        $.uint,
        $.long,
        $.ulong,
        $.cent, // deprecated
        $.ucent, // deprecated
        $.wchar,
        $.dchar,
        $.float,
        $.double,
        $.real,
        $.ifloat, // deprecated
        $.idouble, // deprecated
        $.ireal, // deprecated
        $.cfloat, // deprecated
        $.cdouble, // deprecated
        $.creal, // deprecated
        $.size_t,
        $.ptrdiff_t,
        $.string,
        $.cstring,
        $.dstring,
        $.wstring,
        $.noreturn,
      ),

    // we call out void specially because it is not always a basic type
    void: (_$) => "void",

    _type_suffix: ($) =>
      prec.right(
        choice(
          "*",
          seq("[", "]"),
          seq("[", $.expression, "]"),
          seq("[", $.expression, "..", $.expression, "]"),
          seq("[", $.type, "]"),
          seq($.delegate, $.parameters, repeat($.member_function_attribute)),
          seq($.function, $.parameters, repeat($._function_attribute)),
        ),
      ),

    _attribute: ($) =>
      prec.right(
        choice(
          $.linkage_attribute,
          $.align_attribute,
          $.deprecated_attribute,
          $.pragma_expression,
          $.type_ctor,
          $.private,
          $.package,
          seq($.package, "(", $.module_fqn, ")"),
          $.protected,
          $.public,
          $.export,
          $.static,
          $.extern,
          $.abstract,
          $.final,
          $.override,
          $.synchronized,
          $.auto,
          $.scope,
          $.gshared,
          $.at_attribute,
          $._function_attribute_kwd,
          $.ref,
          $.return,
        ),
      ),

    at_attribute: ($) =>
      prec.right(
        choice(
          seq("@", $.identifier),
          seq("@", $.identifier, $.arguments),
          seq("@", $.template_instance),
          seq("@", $.template_instance, $.arguments),
          seq("@", "(", $._argument_list, ")"),
        ),
      ),

    _function_attribute_kwd: ($) => choice($.nothrow, $.pure),

    _argument_list: ($) => prec.right(commaSep1Comma($.expression)),

    named_argument: ($) =>
      choice($.expression, seq($.identifier, ":", $.expression)),

    _named_argument_list: ($) => prec.right(commaSep1Comma($.named_argument)),

    named_arguments: ($) => seq("(", optional($._named_argument_list), ")"),

    //
    // 3.6 PRAGMAS
    //
    expression_list: ($) => prec.right(commaSep1($._expr)),

    // formally this is AssignExpression, but we use a different
    // structure.  This is just a single expression term, and
    // cannot be used in a comma expression. Expression is
    // used where comma separated expressions are valid.
    //
    // The formal D grammar permits expression lists in many places,
    // but then the compiler rejects almost any attempt to use them.
    // We are electing to reject these in the syntax, rather than
    // in the semantic.  This makes our grammar simpler, and has
    // zero effect on any actual legal code.
    expression: ($) => $._expr,
    _expr: ($) =>
      prec.left(
        choice(
          $.assignment_expression,
          $.ternary_expression,
          $.binary_expression,
          $.ternary_expression,
          $._unary_expr,
        ),
      ),

    call_expression: ($) =>
      prec.left(
        choice(
          seq($._unary_expr, $.named_arguments),
          prec(2, seq($._builtin_type, $.named_arguments)),
          prec(1, seq($.identifier, $.named_arguments)),
          seq($.type, $.named_arguments),
        ),
      ),

    binary_expression: ($) =>
      choice(
        $.logical_or_expression,
        $.logical_and_expression,
        $.or_expression,
        $.xor_expression,
        $.and_expression,
        $.equal_expression,
        $.rel_expression,
        $.identity_expression,
        $.add_expression,
        $.mul_expression,
        $.shift_expression,
        $.power_expression,
      ),

    equal_expression: ($) =>
      prec.left("compare", binaryOp($._expr, choice("==", "!="), $._expr)),

    add_expression: ($) =>
      prec.left("add", binaryOp($._expr, choice("+", "-", "~"), $._expr)),

    mul_expression: ($) =>
      prec.left("multiply", binaryOp($._expr, choice("*", "/", "%"), $._expr)),

    _unary_expr: ($) =>
      choice(
        $._primary_expr,
        $.unary_expression,
        $.new_expression,
        $.delete_expression,
        $.assert_expression,
        $.cast_expression,
        $.throw_expression,
        $.call_expression,
        $.index_expression,
        $.postfix_expression,
        $.property_expression,
      ),

    assert_arguments: ($) =>
      seq(
        $.expression,
        optional(seq(",", commaSep1($.expression))),
        optional(","),
      ),

    //
    // Mixin expression.  The result may be an lvalue.
    //
    quoted_string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(prec(1, /[^"\\]+/)),
            $.escape_sequence,
            $.htmlentity,
          ),
        ),
        token.immediate(/"[cdw]?/),
      ),

    // interpolated strings
    string_literal: ($) =>
      choice(
        $._string,
        $.raw_string,
        $.hex_string,
        $.quoted_string,
        $.token_string,
        $.interpolated_raw_string,
        $.interpolated_quoted_string,
        $.interpolated_token_string,
      ),

    char_literal: ($) =>
      choice(
        /'[^\\']'/,
        seq("'", choice($.escape_sequence, $.htmlentity), "'"),
      ),

    // NB: array_literals are a super set of associative array literals,
    // and grammatically the two are not distinguishable.
    function_literal: ($) =>
      prec.right(
        choice(
          seq(
            $.function,
            optional(seq(optional($.auto), $.ref)),
            optional($.type),
            optional($._parameter_with_attributes),
            $._specified_function_body,
          ),
          seq(
            $.function,
            optional(seq(optional($.auto), $.ref)),
            optional($.type),
            $._parameter_with_attributes,
            "=>",
            $._expr,
          ),
          seq(
            $.delegate,
            optional(seq(optional($.auto), $.ref)),
            optional($.type),
            optional($._parameter_with_member_attributes),
            $._specified_function_body,
          ),
          seq(
            $.delegate,
            optional(seq(optional($.auto), $.ref)),
            optional($.type),
            $._parameter_with_member_attributes,
            "=>",
            $._expr,
          ),
          seq(
            optional(seq(optional($.auto), $.ref)),
            $._parameter_with_member_attributes,
            $._specified_function_body,
          ),
          seq(
            optional(seq(optional($.auto), $.ref)),
            $._parameter_with_member_attributes,
            "=>",
            $._expr,
          ),
          $._specified_function_body,
          seq($.identifier, "=>", $._expr),
        ),
      ),

    _parameter_with_attributes: ($) =>
      seq($.parameters, repeat($._function_attribute)),

    _parameter_with_member_attributes: ($) =>
      seq($._parameters, repeat($.member_function_attribute)),

    _declarations_and_statements: ($) => repeat1($._declaration_or_statement),

    block_statement: ($) =>
      seq(
        "{",
        optional($._declarations_and_statements),
        optional($.label),
        "}",
      ),

    expression_statement: ($) => seq($.expression_list, ";"),

    return_statement: ($) => seq($.return, optional($.expression), ";"),

    aggregate_body: ($) => seq("{", repeat($._declaration), "}"),

    //
    // Struct Initializer
    //
    // renamed to aggregate initializer, as this is used for
    // all aggregate types (classes, enums, interfaces, structs)
    // also struct_member_initializers is inlined here
    _base_class_list: ($) => commaSep1($.base_class),
    interface_declaration: ($) =>
      seq(
        repeat($._attribute),
        choice(
          seq($.interface, $.identifier, ";"),
          seq($.interface, $.identifier, $.aggregate_body),
          seq(
            $.interface,
            $.identifier,
            ":",
            $._base_class_list,
            $.aggregate_body,
          ),
          seq(
            $.interface,
            $.identifier,
            $.template_parameters,
            $.aggregate_body,
          ),
          seq(
            $.interface,
            $.identifier,
            $.template_parameters,
            ":",
            $._base_class_list,
            $.aggregate_body,
          ),
          seq(
            $.interface,
            $.identifier,
            $.template_parameters,
            ":",
            $._base_class_list,
            $.constraint,
            $.aggregate_body,
          ),
          seq(
            $.interface,
            $.identifier,
            $.template_parameters,
            $.constraint,
            $.aggregate_body,
          ),
          seq(
            $.interface,
            $.identifier,
            $.template_parameters,
            $.constraint,
            ":",
            $._base_class_list,
            $.aggregate_body,
          ),
        ),
      ),

    /**************************************************
     *
     * 3.12 ENUMS
     *
     */

    function_declaration: ($) =>
      seq(
        repeat($._attribute),
        prec.right(
          choice(
            seq(
              $.type,
              $.identifier,
              $.parameters,
              repeat($.member_function_attribute),
              $.function_body,
            ),
            seq(
              $.type,
              $.identifier,
              $.template_parameters,
              $.parameters,
              repeat($.member_function_attribute),
              optional($.constraint),
              $.function_body,
            ),
            seq(
              repeat1($.storage_class),
              $.identifier,
              $.parameters,
              repeat($.member_function_attribute),
              $.function_body,
            ),
            seq(
              repeat1($.storage_class),
              $.identifier,
              $.template_parameters,
              $.parameters,
              repeat($.member_function_attribute),
              optional($.constraint),
              $.function_body,
            ),
          ),
        ),
      ),

    //
    // Parameters
    //
    parameters: ($) =>
      prec.right(
        choice(
          seq("(", ")"),
          seq("(", commaSep1Comma($.parameter), ")"),
          seq("(", commaSep1($.parameter), ",", $.ellipses, ")"),
          seq(
            "(",
            commaSep1($.parameter),
            ",",
            $._variadic_arguments_attributes,
            $.ellipses,
            ")",
          ),
          seq("(", $.ellipses, ")"),
          seq("(", $._variadic_arguments_attributes, $.ellipses, ")"),
        ),
      ),

    parameter: ($) => prec.right($._parameter),

    _parameter: ($) =>
      prec.right(
        choice(
          seq(repeat($.parameter_attribute), $.type),
          seq(repeat($.parameter_attribute), $.type, $.ellipses),
          seq(
            repeat($.parameter_attribute),
            $.type,
            "=",
            $._expr,
            optional($.ellipses),
          ),
          seq(repeat($.parameter_attribute), $.type, $.identifier),
          seq(repeat($.parameter_attribute), $.type, $.identifier, $.ellipses),
          seq(
            repeat($.parameter_attribute),
            $.type,
            $.identifier,
            "=",
            $._expr,
            optional($.ellipses),
          ),
        ),
      ),

    ellipses: (_$) => "...",

    _variadic_arguments_attributes: ($) =>
      repeat1($.variadic_arguments_attribute),

    _function_attribute: ($) =>
      choice($._function_attribute_kwd, $.at_attribute),

    member_function_attribute: ($) =>
      choice(
        $.const,
        $.immutable,
        $.inout,
        $.return,
        $.scope,
        $.shared,
        $._function_attribute,
      ),

    //
    // Function Body
    //
    function_body: ($) =>
      choice(
        seq(optional($._in_out_contract_expressions), "=>", $._expr, ";"),
        seq(repeat($._function_contract), optional($.do), $.block_statement),
        seq(repeat($._function_contract), ";"),
        seq(repeat($._function_contract), $._in_out_statement),
      ),

    _specified_function_body: ($) =>
      seq(repeat($._function_contract), optional($.do), $.block_statement),

    //
    // Function Contracts
    //
    _function_contract: ($) =>
      choice($._in_out_contract_expression, $._in_out_statement),

    _in_out_contract_expressions: ($) => repeat1($._in_out_contract_expression),

    _in_out_statement: ($) => choice($.in_statement, $.out_statement),

    in_contract_expression: ($) => seq($.in, "(", $.assert_arguments, ")"),
